started working on JS city elements

--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
           </div>
           <div class="time">5:45 PM</div>
         </div>
+        <div class="city">
+          <div>
+            <h2>Athens</h2>
+            <div class="date">December 5th 2022</div>
+          </div>
+          <div class="time">5:45 PM</div>
+        </div>
       </div>
     </div>
 
