--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@
       >
       on GitHub
     </footer>
-    <script src="index.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
